[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5.0", features = ["nightly", "csr"] }
leptos_router = { version = "0.5.0", features = ["nightly", "csr"] }
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.2", features = ["futures"] }
uuid = { version = "1", features = ["v4"] }
